# photo_archiver

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
archive-config/: Cargo.toml
archive-config/src/: lib.rs
archive-database/: Cargo.toml
archive-database/src/: database.rs  lib.rs  structs.rs
archive-database/src/entities/: users.rs
archive-frontend/: .gitignore  README.md  package.json  vite.config.ts
archive-frontend/src/: App.svelte  App.vue  app.html
archive-frontend/src/components/: Home.vue
archive-frontend/src/lib/: GoogleLogin.svelte  Login.svelte  LoginButton.svelte  Logout.svelte
archive-frontend/src/lib/stores/: auth.ts
archive-frontend/src/routes/: +layout.svelte  +page.svelte
archive-frontend/src/routes/login/: +page.svelte
archive_frontend/: package.json
gphotos-downloader/: Cargo.toml
gphotos-downloader/src/: error.rs  lib.rs  structs.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
src/: config.rs  lib.rs  main.rs
src/oauth/: mod.rs  oauth.rs
src/photos/: mod.rs  photo_manager.rs
src/user/: mod.rs  oauth.rs  user_manager.rs
src/user/oauth/: mod.rs  oauth_api.rs
src/user/user/: user_manager.rs
