[package]
name = "archive-database"
version = "0.1.0"
edition = "2021"

[lib]
name = "archive_database"
path = "src/lib.rs"

[dependencies]
archive-config = { path = "../archive-config"}
migration = { path = "../migration" }
jwt = "0.16.0"
log = "0.4.22"
serde = "1.0.215"
tokio = { version = "1.41.1", features = [ "full" ] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
oauth2 = "4.4.2"
