[package]
name = "gphotos-downloader"
version = "0.0.1"
edition = "2021"

[lib]
name = "gphotos_downloader"
path = "src/lib.rs"

[dependencies]
archive-database = { path = "../archive-database"}
serde = { version = "1.0.215", features = [ "derive" ]}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = [ "full"] }
reqwest = "0.11"
log = "0.4.22"
pretty_env_logger = "0.5.0"
uid = "0.1.8"
